--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean-dist": "rimraf dist",
     "test": "jest --force-exit --detectOpenHandles --config=./jest.config.js",
     "build": "npm run tsc",
-    "tsc": "npm run clean-dist && npm run tsc-cjs && npm run tsc-esm",
+    "tsc": "npm run clean-dist && npm run tsc-cjs",
     "tsc-cjs": "tsc -b src/tsconfig.cjs.json",
     "tsc-esm": "tsc -b src/tsconfig.esm.json",
     "postbuild": "cpy --cwd=src --parents plugins ../dist"
@@ -66,7 +66,7 @@
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.3",
     "jest": "^27.3.1",
-    "puppeteer": "^11.0.0",
+    "puppeteer": "^19.11.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
